--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-Django
-gunicorn
-whitenoise
-dj-database-url
-psycopg2
+Django>=3.2,<4.0
+gunicorn==20.1.0
+whitenoise==6.3.0
+dj-database-url==1.2.0
+psycopg2-binary==2.9.5
 pandas
 openpyxl
-dj-database-url==1.2.0
-whitenoise==6.3.0
-gunicorn==20.1.0
-psycopg2-binary==2.9.5
 requests
